--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "dependencies": {
-    "axios": "^1.6.0"
+    "axios": "^1.6.1",
+    "bootstrap": "^5.3.2",
+    "react-bootstrap": "^2.9.1",
+    "react-router-dom": "^6.18.0"
+  },
+  "devDependencies": {
+    "vite": "^4.5.0"
   }
 }
